dark mode buggy

--- a/src/assets/stylesheets/styles.scss
+++ b/src/assets/stylesheets/styles.scss
@@ -6,6 +6,7 @@
     --cb-border: hsl(236, 33%, 92%);
     --shadow-outline: 0px 0px 26px lightgray;
     --filter-info: hsl(236, 9%, 61%);
+    --bg-image-mobile: url(../images/bg-mobile-light.jpg);
 
 }
 
@@ -17,6 +18,8 @@
     --cb-border: hsl(233, 14%, 35%);
     --shadow-outline: 0px 0px 26px black;
     --filter-info: hsl(236, 9%, 61%);
+    --bg-image-mobile: url(../images/bg-mobile-dark.jpg);
+
 }
 
 body {
@@ -27,11 +30,13 @@ body {
 }
 
 .app {
+    background-image: var(--bg-image-mobile);
     background-repeat: no-repeat;
     margin: 0;
     padding: 0;
     background-color: var(--bg-color);
     position: relative;
+
 
 
 }
